Closed
Bug 1624434
Opened 5 years ago
Closed 5 years ago
VoiceOver repeats text in table headers
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla76
| Tracking | Status | |
|---|---|---|
| firefox76 | --- | verified |
People
(Reporter: morgan, Assigned: morgan)
Details
Attachments
(1 file)
STR:
Launch VoiceOver in Firefox
Navigate to the following URL:
data:text/html,<table><tbody><tr><th>Sample</th></tbody></table>
Expected: VoiceOver says "Sample" once
Actual: VoiceOver says "Sample Sample"
| Assignee | ||
Updated•5 years ago
|
Priority: -- → P1
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → mreschenberg
Status: NEW → ASSIGNED
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/46ac4ee8eeb4
Remove description attribute for table elements. r=eeejay
Comment 3•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox76:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
Updated•5 years ago
|
OS: Unspecified → macOS
Hardware: Unspecified → All
Updated•5 years ago
|
Flags: qe-verify+
Comment 4•5 years ago
|
||
Reproduced the initial issue using an old Nightly from 2020-03-23, verified that using latest Firefox beta 76.0b6 the issue is no longer present, Sample is only announced once.
You need to log in
before you can comment on or make changes to this bug.
Description
•