Bug 1624434: Remove description attribute for table elements. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D67928